<resources>
    <string name="app_name">WorldCup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="round_32_message_error">You can just select two teams</string>
    <string name="eliminated_rounds_error_message">You can just select one team</string>
    <string name="coins_image">coins image</string>
    <string name="banner1">banner1</string>
    <string name="banner2">banner2</string>
    <string name="coins">coins</string>
    <string name="esim">esim</string>
    <string name="_5_400">5/400</string>
    <string name="get_free_usa_number">Get FREE USA NUMBER</string>
    <string name="watch_videos_over_the_day">Watch videos over the day</string>
    <string name="_3_5_coins">3-5 Coins</string>
</resources>