<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.InfoFragment">


    <ImageView
        android:id="@+id/banner1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:contentDescription="@string/banner1"
        android:src="@mipmap/banner_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal1"
        app:layout_constraintEnd_toStartOf="@+id/banner2"
        app:layout_constraintStart_toStartOf="@id/guidelineScreenLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineScreenTop" />

    <ImageView
        android:id="@+id/banner2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:contentDescription="@string/banner2"
        android:src="@mipmap/banner_right"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal1"
        app:layout_constraintEnd_toEndOf="@+id/guidelineScreenRight"
        app:layout_constraintStart_toEndOf="@id/banner1"
        app:layout_constraintTop_toTopOf="@id/guidelineScreenTop" />

    <ImageView
        android:id="@+id/coinsImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/coins_image"
        android:src="@mipmap/coins_center_image"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal3"
        app:layout_constraintEnd_toEndOf="@id/guidelineScreenRight"
        app:layout_constraintStart_toStartOf="@id/guidelineScreenLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal1" />

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/coinsCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/coins_card"
        card_view:cardBackgroundColor="#F5F5F5"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="0dp"
        card_view:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal5"
        card_view:layout_constraintEnd_toEndOf="@id/guidelineScreenRight"
        card_view:layout_constraintStart_toStartOf="@id/guidelineScreenLeft"
        card_view:layout_constraintTop_toTopOf="@id/guidelineHorizontal2" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/coins"
        android:src="@mipmap/coins_icon"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal4"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical1"
        app:layout_constraintStart_toStartOf="@id/guidelineScreenLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|bottom"
        android:text="@string/_5_400"
        android:textColor="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal3" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progress="50"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal4"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal3" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:contentDescription="@string/esim"
        android:src="@mipmap/esim_icon"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal4"
        app:layout_constraintEnd_toEndOf="@id/guidelineScreenRight"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal3" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="@mipmap/coins_center_button"
        android:text="@string/get_free_usa_number"
        android:textColor="#737373"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal5"
        app:layout_constraintEnd_toEndOf="@id/guidelineScreenRight"
        app:layout_constraintStart_toStartOf="@id/guidelineScreenLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal4" />

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adsCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/coins_card"
        card_view:cardBackgroundColor="#DCDCDC"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="0dp"
        card_view:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontal8"
        card_view:layout_constraintEnd_toEndOf="@id/guidelineScreenRight"
        card_view:layout_constraintStart_toStartOf="@id/guidelineScreenLeft"
        card_view:layout_constraintTop_toTopOf="@+id/guidelineHorizontal5" />


    <ImageView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/banner2"
        android:src="@mipmap/info_icon"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal7"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@id/guidelineScreenLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal6" />

    <ImageView
        android:id="@+id/rewardedAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/banner2"
        android:src="@mipmap/banner_ads"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal7"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical4"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal6" />

    <ImageView
        android:id="@+id/ads_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/banner2"
        android:src="@mipmap/ads_icon"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal7"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"
        app:layout_constraintBottom_toTopOf="@id/tvAds1"/>

    <TextView
        android:id="@+id/tvAds1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/watch_videos_over_the_day"
        android:textColor="@color/primaryColor"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        app:layout_constraintTop_toBottomOf="@id/ads_icon"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"
        app:layout_constraintBottom_toTopOf="@id/tvAds2"
        />

    <TextView
        android:id="@+id/tvAds2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_3_5_coins"
        android:textColor="@color/primaryColor"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        app:layout_constraintTop_toBottomOf="@id/tvAds1"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical3"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal8"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineScreenRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineScreenLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineScreenTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />
</androidx.constraintlayout.widget.ConstraintLayout>